force-app/main/default/objects/ContentVersion/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>