force-app/main/default/objects/ContentVersion/fields/Claimant_Refer__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Refer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Refer</label>
    <type>Checkbox</type>
</CustomField>