force-app/main/default/objects/ContentVersion/fields/Defendant_Refer__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Refer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defendant Refer</label>
    <type>Checkbox</type>
</CustomField>