force-app/main/default/objects/ContentVersion/fields/Document_Source__c.field-meta.xml
<CustomField>
    <fullName>Document_Source__c</fullName>
    <label>Document Source</label>
    <length>32</length>
    <type>Text</type>
</CustomField>