force-app/main/default/objects/ContentVersion/fields/Ghost_Draft_Doc__c.field-meta.xml
<CustomField>
    <fullName>Ghost_Draft_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ghost Draft Doc</label>
    <type>Checkbox</type>
</CustomField>