force-app/main/default/objects/ContentVersion/fields/INAP_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>INAP_Doc_Type__c</fullName>
    <label>INAP Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>INAP_Document_Type</valueSetName>
    </valueSet>
</CustomField>