force-app/main/default/objects/ContentVersion/fields/Loss_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item_ID__c</fullName>
    <label>Loss Item ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>