force-app/main/default/objects/ContentVersion/fields/Loss_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item_Name__c</fullName>
    <label>Loss Item Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>