force-app/main/default/objects/ContentVersion/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <label>Loss Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loss_Type</valueSetName>
    </valueSet>
</CustomField>