force-app/main/default/objects/ContentVersion/fields/Sharing_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Permissions__c</fullName>
    <label>Sharing Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Sharing_Permissions</valueSetName>
    </valueSet>
</CustomField>