force-app/main/default/objects/ContentVersion/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <label>Uploaded By:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Roles</valueSetName>
    </valueSet>
</CustomField>